<resources>
    <string name="app_name">HotelTest</string>
    <string name="hotel_fragment_title">Отель</string>
    <string name="ruble">₽</string>
    <string name="booking_add_tourist">Добавить туриста</string>
    <string name="booking_customer_info">Информация о покупателе</string>
    <string name="booking_phone_hint">Номер телефона</string>
    <string name="booking_email_hint">Почта</string>
    <string name="booking_not_transmitted">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="booking_tour">Тур</string>
    <string name="booking_fuel">Топливный сбор</string>
    <string name="booking_service">Сервисный сбор</string>
    <string name="booking_summary">К оплате</string>
    <string name="booking_flight">Вылет из</string>
    <string name="booking_country">Страна, город</string>
    <string name="booking_dates">Даты</string>
    <string name="booking_nights">Кол-во ночей</string>
    <string name="booking_hotel">Отель</string>
    <string name="booking_room">Номер</string>
    <string name="booking_nutrition">Питание</string>
    <string name="booking_name_hint">Имя</string>
    <string name="booking_surname_hint">Фамилия</string>
    <string name="booking_birthday_hint">Дата рождения</string>
    <string name="booking_citizenship_hint">Гражданство</string>
    <string name="booking_passport_hint">Номер загранпаспорта</string>
    <string name="booking_expiration_hint">Срок действия загранпаспорта</string>
    <string name="hotel_about_hotel">Об отеле</string>
    <string name="hotel_amenities">Удобства</string>
    <string name="hotel_necessary">Самое необходимое</string>
    <string name="hotel_included">Что включено</string>
    <string name="hotel_not_included">Что не включено</string>
    <string name="hotel_button_text">К выбору номера</string>
    <string name="paid_accepted">Ваш заказ принят в работу</string>
    <string name="paid_button">Супер!</string>
    <string name="room_detaild">Подробнее о номере</string>
    <string name="room_button">Выбрать номер</string>
</resources>